--- a/design/src/main/res/drawable/bg_b.xml
+++ b/design/src/main/res/drawable/bg_b.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Focused state - show gray background for TV remote selection -->
+    <item android:state_focused="true">
+        <layer-list>
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="?attr/colorSurface" />
+                    <corners android:radius="8dp" />
+                </shape>
+            </item>
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="?attr/colorControlHighlight" />
+                    <corners android:radius="8dp" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+    
+    <!-- Default state -->
     <item>
         <shape android:shape="rectangle">
             <solid android:color="?attr/colorSurface" />
-            <corners
-                android:radius="8dp"
-                />
+            <corners android:radius="8dp" />
         </shape>
     </item>
-
-</layer-list>
+</selector>
