Add: Floating Window enable button to home page, enble it to keep the app in background, try to forbidden system to kill it

--- a/design/src/main/res/layout/design_main.xml
+++ b/design/src/main/res/layout/design_main.xml
@@ -26,6 +26,9 @@
         <variable
             name="hasProviders"
             type="boolean" />
+        <variable
+            name="floatingWindowShowing"
+            type="boolean" />
 
         <import type="android.view.View" />
         <import type="com.github.kr328.clash.design.MainDesign.Request" />
@@ -155,6 +158,14 @@
                     android:onClick="@{() -> self.request(Request.OpenAbout)}"
                     app:icon="@drawable/ic_baseline_info"
                     app:text="@string/about" />
+
+                <com.github.kr328.clash.design.view.LargeActionLabel
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/main_label_margin_vertical"
+                    android:onClick="@{() -> self.request(Request.ShowFloatingWindow)}"
+                    app:icon="@drawable/ic_clash"
+                    app:text="@{floatingWindowShowing ? @string/hide_floating_window : @string/show_floating_window}" />
             </LinearLayout>
         </ScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
